--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -598,7 +598,7 @@ h6 {
     inset: 60px 20px 20px 20px;
     padding: 10px 0;
     margin: 0;
-    background-color: color-mix(in srgb, var(--nav-mobile-background-color), transparent 12%);
+    background-color: var(--nav-mobile-background-color);
     border: 1px solid rgba(224, 224, 224, 0.04);
     /* Borda sutil */
     overflow-y: auto;
