--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -636,13 +636,15 @@ h6 {
 --------------------------------------------------------------*/
 .footer {
   color: var(--contrast-color);
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: #1a1a1a;
   text-align: center;
   padding: 40px 0;
   position: relative;
-  box-shadow: 0 -3px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.5);
   /* Sombra para transição */
 }
+
+
 
 .footer h1 {
   font-size: 1.5em;
@@ -652,12 +654,8 @@ h6 {
   animation: fadeInDown 1s both;
   font-family: "Wild and Folk Regular", sans-serif;
   letter-spacing: 4px;
-  color: #afafaf;
-}
-
-.footer .subtitulo {
-  color: #9c9c9c;
-
+  color: #bbbbbb;
+  /* Dourado sofisticado */
 }
 
 .footer h3 {
@@ -674,6 +672,8 @@ h6 {
   font-style: italic;
   padding: 0;
   margin: 0 0 30px 0;
+  color: rgba(255, 255, 255, 0.8);
+  /* Texto em branco com opacidade */
 }
 
 .footer .social-links {
@@ -685,7 +685,7 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: color-mix(in srgb, var(--accent-color), transparent 20%);
+  color: rgba(255, 255, 255, 0.7);
   /* Ícones com opacidade */
   line-height: 1;
   margin: 0 6px;
@@ -696,34 +696,35 @@ h6 {
   transition: all 0.3s ease;
   text-decoration: none;
   background-color: transparent;
-  border: 1px dotted var(--accent-color);
+  border: 1px solid rgba(255, 255, 255, 0.4);
   /* Borda clara */
 }
 
 .footer .social-links a:hover {
   color: var(--accent-color);
   /* Dourado no hover */
-  border-color: rgba(255, 255, 255, 0.1);
+  border-color: var(--accent-color);
   /* Destaque no hover */
   background-color: rgba(255, 255, 255, 0.1);
-  border: 1px solid var(--accent-color);
+  /* Fundo claro sutil */
 }
 
 .footer .copyright {
   font-size: 13px;
   padding-top: 25px;
-  border-top: 1px solid rgba(5, 5, 5, 0.09);
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
   /* Linha sutil */
-  color: rgba(5, 5, 5, 0.6);
+  color: rgba(255, 255, 255, 0.6);
   /* Texto claro */
 }
 
 .footer .credits {
   font-size: 13px;
   padding-top: 5px;
-  color: rgba(5, 5, 5, 0.6);
+  color: rgba(255, 255, 255, 0.6);
   /* Texto com opacidade */
 }
+
 
 /*--------------------------------------------------------------
 # Preloader
