Update light version

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -636,7 +636,7 @@ h6 {
 --------------------------------------------------------------*/
 .footer {
   color: var(--contrast-color);
-  background-color: #1a1a1a;
+  background-color: #0c0c0c;
   text-align: center;
   padding: 40px 0;
   position: relative;
