--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,7 +37,7 @@
   /* Paleta Global */
   --background-color: #060606d8;
   /* Fundo escuro principal */
-  --default-color: #ffffffc4;
+  --default-color: #e6e6e6c4;
   /* Cinza claro para texto */
   --heading-color: #080808;
   /* Branco sutil para títulos */
@@ -515,7 +515,7 @@ h6 {
     inset: 60px 20px 20px 20px;
     padding: 10px 0;
     margin: 0;
-    background-color: color-mix(in srgb, var(--nav-mobile-background-color), transparent 8%);
+    background-color: color-mix(in srgb, var(--nav-mobile-background-color), transparent 20%);
     border: 1px solid rgba(224, 224, 224, 0.04);
     /* Borda sutil */
     overflow-y: auto;
@@ -531,7 +531,7 @@ h6 {
 
   .navmenu a,
   .navmenu a:focus {
-    color: var(--gray-tone);
+    color: var(--heading-color);
     padding: 10px 20px;
     font-family: var(--nav-font);
     font-size: 17px;
